new config, need to make this better for others
git-svn-id: file:///var/lib/svn/openjsan/openjsan/trunk@75 139b8d9b-c9ab-42d9-a619-4cf020c53d71

--- a/etc/jsan.cfg
+++ b/etc/jsan.cfg
@@ -1,11 +1,11 @@
 [dev]
-site   = /usr/sites/openjsan-dev
-db     = openjsan_dev
-dbauth = /usr/sites/openjsan-dev/.dbauth
-jause  = /jause/index.html
+site   = /var/www/dev.openjsan.org
+db     = openjsan-dev
+dbauth = /var/www/dev.openjsan.org/openjsan/.dbauth
+jause  = http://dev.openjsan.org/jause/index.html
 
 [live]
-site   = /usr/sites/openjsan
+site   = /var/www/master.openjsan.org
 db     = openjsan
-dbauth = /usr/sites/openjsan/.dbauth
+dbauth = /var/www/master.openjsan.org/openjsan/.dbauth
 jause  = https://master.openjsan.org/jause/index.html
