migrate from AppConfig to JSON

--- a/etc/jsan.cfg
+++ b/etc/jsan.cfg
@@ -1,11 +1,16 @@
-[dev]
-site   = /var/www/dev.openjsan.org
-db     = openjsan-dev
-dbauth = /var/www/dev.openjsan.org/openjsan/.dbauth
-jause  = http://dev.openjsan.org/jause/index.html
-
-[live]
-site   = /var/www/master.openjsan.org
-db     = openjsan
-dbauth = /var/www/master.openjsan.org/openjsan/.dbauth
-jause  = https://master.openjsan.org/jause/index.html
+{ 
+  "site": { 
+    "dev.openjsan.org": {
+      "site":   "/var/www/dev.openjsan.org",
+      "db":     "openjsan-dev",
+      "dbauth": "/var/www/dev.openjsan.org/openjsan/.dbauth",
+      "jause":  "http://dev.openjsan.org/jause/index.html"
+    },
+    "master.openjsan.org": {
+      "site":   "/var/www/master.openjsan.org",
+      "db":     "openjsan",
+      "dbauth": "/var/www/master.openjsan.org/openjsan/.dbauth",
+      "jause":  "https://master.openjsan.org/jause/index.html"
+    }
+  }
+}
