- updated httpd.conf

--- a/etc/httpd.conf
+++ b/etc/httpd.conf
@@ -1,29 +1,29 @@
 NameVirtualHost *:80
 
 <VirtualHost *:80>
-    DocumentRoot /usr/sites/openjsan/htdocs
-    Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
+    DocumentRoot /var/www/master.openjsan.org/htdocs
+    #Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
 
-    <Directory /usr/sites/openjsan/htdocs/dist>
+    <Directory /var/www/master.openjsan.org/dist>
         Options +Indexes
     </Directory>
 
-    <Directory /usr/sites/openjsan/htdocs/src>
+    <Directory /var/www/master.openjsan.org/src>
         Options +Indexes
     </Directory>
 
     <Perl>
-        use lib qw[/usr/sites/openjsan/lib];
+        use lib qw[/var/www/master.openjsan.org/openjsan/openjsan/lib];
     </Perl>
 
-    Alias /community/rt/internal/ "/usr/sites/openjsan/rt-internal/share/html/"
-    AddDefaultCharset UTF-8
-    PerlModule Apache::DBI
-    PerlRequire /usr/sites/openjsan/rt-internal/bin/webmux.pl
-    <Location /community/rt/internal>
-       SetHandler perl-script
-       PerlHandler RT::Mason
-    </Location>
+    #Alias /community/rt/internal/ "/usr/sites/openjsan/rt-internal/share/html/"
+    #AddDefaultCharset UTF-8
+    #PerlModule Apache::DBI
+    #PerlRequire /usr/sites/openjsan/rt-internal/bin/webmux.pl
+    #<Location /community/rt/internal>
+    #   SetHandler perl-script
+    #   PerlHandler RT::Mason
+    #</Location>
 
 
     PerlModule Apache::Template
@@ -35,7 +35,7 @@ NameVirtualHost *:80
         PerlHandler Apache::Template
     </Location>
 
-    Alias /documentation/wiki/ "/usr/sites/openjsan/kwiki-authors/"
+    Alias /documentation/wiki/ "/var/www/master.openjsan.org/openjsan/openjsan/kwiki-authors/"
     <Location /documentation/wiki>
         SetEnv JSAN_DEV 0
         AddHandler cgi-script .cgi
@@ -45,12 +45,12 @@ NameVirtualHost *:80
 
 <VirtualHost *:80>
     ServerName planet.openjsan.org
-    DocumentRoot /usr/sites/openjsan/planet-javascript/htdocs
-    Alias /style.css "/usr/sites/openjsan/htdocs/style.css"
-    Alias /planet.css "/usr/sites/openjsan/htdocs/planet.css"
-    Alias /favicon.ico "/usr/sites/openjsan/htdocs/favicon.ico"
-    Alias /images/ "/usr/sites/openjsan/htdocs/images/"
-    Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
+    DocumentRoot /var/www/master.openjsan.org/openjsan/planet-javascript/htdocs
+    Alias /style.css "/var/www/master.openjsan.org/htdocs/style.css"
+    Alias /planet.css "/var/www/master.openjsan.org/htdocs/planet.css"
+    Alias /favicon.ico "/var/www/master.openjsan.org/htdocs/favicon.ico"
+    Alias /images/ "/var/www/master.openjsan.org/htdocs/images/"
+    #Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
 </VirtualHost>
 
 <VirtualHost *:80>
