- updated httpd.conf

--- a/etc/httpd.conf
+++ b/etc/httpd.conf
@@ -45,7 +45,7 @@ NameVirtualHost *:80
 
 <VirtualHost *:80>
     ServerName planet.openjsan.org
-    DocumentRoot /var/www/master.openjsan.org/openjsan/planet-javascript/htdocs
+    DocumentRoot /var/www/master.openjsan.org/openjsan/planet_javascript/htdocs
     Alias /style.css "/var/www/master.openjsan.org/htdocs/style.css"
     Alias /planet.css "/var/www/master.openjsan.org/htdocs/planet.css"
     Alias /favicon.ico "/var/www/master.openjsan.org/htdocs/favicon.ico"
@@ -53,50 +53,50 @@ NameVirtualHost *:80
     #Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
 </VirtualHost>
 
-<VirtualHost *:80>
-    ServerName testing.openjsan.org
-    DocumentRoot /usr/sites/openjsan/smokers/root
-    Alias /src/ "/usr/sites/openjsan/htdocs/src/"
-    Alias /favicon.ico "/usr/sites/openjsan/htdocs/favicon.ico"
+#<VirtualHost *:80>
+#    ServerName testing.openjsan.org
+#    DocumentRoot /usr/sites/openjsan/smokers/root
+#    Alias /src/ "/usr/sites/openjsan/htdocs/src/"
+#    Alias /favicon.ico "/usr/sites/openjsan/htdocs/favicon.ico"
 
-    <Directory /usr/sites/openjsan/htdocs/src>
-        Options +Indexes
-    </Directory>
+#    <Directory /usr/sites/openjsan/htdocs/src>
+#        Options +Indexes
+#    </Directory>
 
-    <Perl>
-        use lib qw[/usr/sites/openjsan/lib];
-        use lib qw[/usr/sites/openjsan/smokers/lib];
-    </Perl>
+#    <Perl>
+#        use lib qw[/usr/sites/openjsan/lib];
+#        use lib qw[/usr/sites/openjsan/smokers/lib];
+#    </Perl>
 
-    PerlSetEnv JSAN_DEV 0
-    PerlModule JSAN::Smoke
-    <LocationMatch "^/r">
-        SetHandler   perl-script
-        PerlHandler  JSAN::Smoke
-    </LocationMatch>
-#    <Location />
+#    PerlSetEnv JSAN_DEV 0
+#    PerlModule JSAN::Smoke
+#    <LocationMatch "^/r">
 #        SetHandler   perl-script
 #        PerlHandler  JSAN::Smoke
+#    </LocationMatch>
+##    <Location />
+##        SetHandler   perl-script
+##        PerlHandler  JSAN::Smoke
+##    </Location>
+
+#    <Location /test>
+#        SetHandler default-handler
+#    </Location>
+#    <Location /src>
+#        SetHandler default-handler
+#    </Location>
+#    <Location /favicon.ico>
+#        SetHandler default-handler
 #    </Location>
 
-    <Location /test>
-        SetHandler default-handler
-    </Location>
-    <Location /src>
-        SetHandler default-handler
-    </Location>
-    <Location /favicon.ico>
-        SetHandler default-handler
-    </Location>
+#    PerlModule Template
+#    <LocationMatch "/src.+smoke\.html">
+#        DefaultType text/html
+#        SetHandler  perl-script
+#        PerlHandler JSAN::Smoke::er
+#    </LocationMatch>
 
-    PerlModule Template
-    <LocationMatch "/src.+smoke\.html">
-        DefaultType text/html
-        SetHandler  perl-script
-        PerlHandler JSAN::Smoke::er
-    </LocationMatch>
-
-</VirtualHost>
+#</VirtualHost>
 
 <IfDefine SSL>
 
