--- a/etc/httpd.conf
+++ b/etc/httpd.conf
@@ -4,12 +4,23 @@ NameVirtualHost *:80
     DocumentRoot /var/www/master.openjsan.org/htdocs
     #Alias /images/mirror/logo.png "/usr/sites/openjsan/misc/master_logo.png"
 
-    <Directory /var/www/master.openjsan.org/dist>
+    <Directory /var/www/master.openjsan.org/htdocs/dist>
         Options +Indexes
+	Order allow,deny
+	Allow from all	
     </Directory>
 
-    <Directory /var/www/master.openjsan.org/src>
+    <Directory /var/www/master.openjsan.org/htdocs/doc>
         Options +Indexes
+	Order allow,deny
+	Allow from all	
+    </Directory>
+    
+    
+    <Directory /var/www/master.openjsan.org/htdocs/src>
+        Options +Indexes
+	Order allow,deny
+	Allow from all	
     </Directory>
 
     <Perl>
